Implementado todosOsPlacares e placarMenos / MaisRepetido